--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -119,9 +119,9 @@
                 </div>
                 <div class="row">
                   <div class="form-group col-xs-12">
-                    <label class="control-label" for="">Used Space: {{usedspace.size}} {{usedspace.unit}}</label>
+                    <label class="control-label" for="">Allocated Space: {{userdata.tabs[current].storage.size}} {{userdata.tabs[current].storage.unit}}</label>
                     <div class="pull-right">
-                      <span class="pull-right">Free Space: {{freespace.size}} {{freespace.unit}}</span>
+                      <span class="pull-right">Free Space: {{userdata.tabs[current].remainingspace.size}} {{userdata.tabs[current].remainingspace.unit}}</span>
                     </div>
                     <div class="row">
                       <div class="col-xs-12">
@@ -130,6 +130,7 @@
                             {{userdata.tabs[current].spaceUsedPercent}}%
                           </div>
                         </div>
+                        Used Space: {{userdata.tabs[current].usedspace.size}} {{userdata.tabs[current].usedspace.unit}}
                       </div>
                     </div>
                   </div>
@@ -168,7 +169,7 @@
         <footer id="footer">
           <div class="row">
             <div class="col-xs-4 text-left">
-              <p><a href="">View Logs</a></p>
+              <p><a href="#" v-on:click="openLogFolder">View Logs</a></p>
             </div>
             <div class="col-xs-4 text-center">
               <p><small><a href="https://storj.io/" class="js-external-link">Powered by Storj</a></small></p>
