Fix terms quotes

--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -403,7 +403,7 @@
           <p><b>Last Updated: July 6, 2016</b></p>
           <p>PLEASE MAKE SURE YOU READ THESE STORAGE SHARING TERMS CAREFULLY.  NOTE THAT SECTION 15 CONTAINS A BINDING ARBITRATION CLAUSE AND CLASS ACTION WAIVER, WHICH AFFECT YOUR LEGAL RIGHTS.</p>
           <p>By installing the Software (defined below), you agree to be bound by these Storage Sharing Terms and all terms incorporated by reference.</p>
-          <p>Storj Labs Inc. (“<b>Company</b>”) provides online storage services (“<b>Storage Services</b>”) to its users that enable users to store data and other materials (“<b>Storage Materials</b>”) via a distributed network of independently operated devices (“<b>Devices</b>”).  Each Device communicates with the Storage Services via open source software (“<b>Software</b>”) that is installed on the Device.  The Software enables a Device to rent extra storage space (“<b>Space</b>”) available on the Device to Company or directly to other third parties.  Company may use the Space it rents from you or may re-rent the Space it rents from you to other users via the Storage Services.</p>
+          <p>Storj Labs Inc. (&ldquo;<b>Company</b>&rdquo;) provides online storage services (&ldquo;<b>Storage Services</b>&rdquo;) to its users that enable users to store data and other materials (&ldquo;<b>Storage Materials</b>&rdquo;) via a distributed network of independently operated devices (&ldquo;<b>Devices</b>&rdquo;).  Each Device communicates with the Storage Services via open source software (&ldquo;<b>Software</b>&rdquo;) that is installed on the Device.  The Software enables a Device to rent extra storage space (&ldquo;<b>Space</b>&rdquo;) available on the Device to Company or directly to other third parties.  Company may use the Space it rents from you or may re-rent the Space it rents from you to other users via the Storage Services.</p>
           <p>These Storage Sharing Terms provide the terms pursuant to which you may rent Space to Company in connection with your use of the Software on any Device.  The Software may also permit you to rent Space directly to others, but these Storage Sharing Terms will not apply to those transactions.  If you never rent any Space to Company, only Sections 1 and 2 of these Storage Sharing Terms will apply to you.</p>
           <p>Please refer to our <a href="https://storj.io/privacy-policy.html">Privacy Policy</a> for information about how we collect, use and disclose information about you.</p>
           <p>You and Company agree as follows:</p>
@@ -414,7 +414,7 @@
             </li>
             <li>
               <h4>Eligibility; Authority</h4>
-              <p>You represent and warrant that you are at least 18 years of age.  If you are entering into this agreement behalf of any entity: (a) you represent and warrant that you are authorized to accept these Storage Sharing Terms on such entity’s behalf and that such entity will be responsible for breach of these Storage Sharing Terms by you or any other employee or agent of such entity; and (b) references to “you” in these Storage Sharing Terms refer to you and such entity, collectively.</p>
+              <p>You represent and warrant that you are at least 18 years of age.  If you are entering into this agreement behalf of any entity: (a) you represent and warrant that you are authorized to accept these Storage Sharing Terms on such entity’s behalf and that such entity will be responsible for breach of these Storage Sharing Terms by you or any other employee or agent of such entity; and (b) references to &ldquo;you&rdquo; in these Storage Sharing Terms refer to you and such entity, collectively.</p>
             </li>
             <li>
               <h4>Software</h4>
@@ -439,8 +439,8 @@
             </li>
             <li>
               <h4>Compensation</h4>
-              <p>(a) Subject to these Storage Sharing Terms, Company will pay you based upon the amount of Space utilized by Company and users of its Storage Services and the prices you have designated for such Space via the Software (“Storage Fees”).  We will pay the Storage Fees in one or more of the following, in our discretion: (i) Company’s proprietary virtual currency, called Storjcoin X (SJCX); (ii) Bitcoin (BTC); or (iii) U.S. dollars.</p>
-              <p>(b) You represent and warrant that you are authorized to receive the Storage Fees in any payment method you designate via the Software that is acceptable to us (“Payment Method”).  If your Payment Method cannot be verified, is invalid, or is not otherwise acceptable, your right to receive payment of the Storage Fees may be suspended automatically.</p>
+              <p>(a) Subject to these Storage Sharing Terms, Company will pay you based upon the amount of Space utilized by Company and users of its Storage Services and the prices you have designated for such Space via the Software (&ldquo;Storage Fees&rdquo;).  We will pay the Storage Fees in one or more of the following, in our discretion: (i) Company’s proprietary virtual currency, called Storjcoin X (SJCX); (ii) Bitcoin (BTC); or (iii) U.S. dollars.</p>
+              <p>(b) You represent and warrant that you are authorized to receive the Storage Fees in any payment method you designate via the Software that is acceptable to us (&ldquo;Payment Method&rdquo;).  If your Payment Method cannot be verified, is invalid, or is not otherwise acceptable, your right to receive payment of the Storage Fees may be suspended automatically.</p>
               <p>(c) You will be responsible for payment of all applicable taxes associated with our payment of Storage Fees, including any taxes on gross receipts or income.  Upon Company’s request, you will accurately and promptly complete and return to Company any tax forms indicated by Company.</p>
             </li>
             <li>
@@ -453,16 +453,16 @@
             </li>
             <li>
               <h4>Feedback</h4>
-              <p>You may submit questions, comments, suggestions, ideas, original or creative materials or other information about Company or the Storage Services to us (collectively, “Feedback”).  Feedback does not include Storage Materials.  We reserve the right to use Feedback for any purpose without compensation to you.  Do not send us Feedback if you expect to be paid or want to continue to own or claim rights in them; your idea might be great, but we may have already had the same or a similar idea and we do not want disputes.</p>
+              <p>You may submit questions, comments, suggestions, ideas, original or creative materials or other information about Company or the Storage Services to us (collectively, &ldquo;Feedback&rdquo;).  Feedback does not include Storage Materials.  We reserve the right to use Feedback for any purpose without compensation to you.  Do not send us Feedback if you expect to be paid or want to continue to own or claim rights in them; your idea might be great, but we may have already had the same or a similar idea and we do not want disputes.</p>
             </li>
             <li>
               <h4>Indemnification</h4>
-              <p>(a) To the fullest extent permitted by applicable law, you will defend, indemnify and hold harmless Company and our respective past, present and future employees, officers, directors, contractors, consultants, equity holders, suppliers, vendors, service providers, parent companies, subsidiaries, affiliates, agents, representatives, predecessors, successors and assigns (the “Company Parties”) from and against all claims, damages, costs and expenses (including attorneys’ fees) that arise from or relate to: (i) your use of the Software; (ii) your sharing or rental of Space; (iii) any Feedback you provide; or (iv) your breach of any of these Storage Sharing Terms.</p>
+              <p>(a) To the fullest extent permitted by applicable law, you will defend, indemnify and hold harmless Company and our respective past, present and future employees, officers, directors, contractors, consultants, equity holders, suppliers, vendors, service providers, parent companies, subsidiaries, affiliates, agents, representatives, predecessors, successors and assigns (the &ldquo;Company Parties&rdquo;) from and against all claims, damages, costs and expenses (including attorneys’ fees) that arise from or relate to: (i) your use of the Software; (ii) your sharing or rental of Space; (iii) any Feedback you provide; or (iv) your breach of any of these Storage Sharing Terms.</p>
               <p>(b) Company reserves the right to exercise sole control over the defense of any claim subject to indemnification under Section 11(a), at your expense.  This indemnity is in addition to, and not in lieu of, any other indemnities set forth in a written agreement between you and Company.</p>
             </li>
             <li>
               <h4>Disclaimers</h4>
-              <p>(A) TO THE FULLEST EXTENT PERMITTED BY APPLICABLE LAW, THE STORAGE SERVICES AND MATERIALS ARE PROVIDED ON AN “AS IS” AND “AS AVAILABLE” BASIS WITHOUT WARRANTIES OF ANY KIND, AND WE EXPRESSLY DISCLAIM ALL IMPLIED WARRANTIES AS TO THE STORAGE SERVICES, INCLUDING, WITHOUT LIMITATION, IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, TITLE AND NON-INFRINGEMENT;</p>
+              <p>(A) TO THE FULLEST EXTENT PERMITTED BY APPLICABLE LAW, THE STORAGE SERVICES AND MATERIALS ARE PROVIDED ON AN &ldquo;AS IS&rdquo; AND &ldquo;AS AVAILABLE&rdquo; BASIS WITHOUT WARRANTIES OF ANY KIND, AND WE EXPRESSLY DISCLAIM ALL IMPLIED WARRANTIES AS TO THE STORAGE SERVICES, INCLUDING, WITHOUT LIMITATION, IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, TITLE AND NON-INFRINGEMENT;</p>
               <p>(B) WE DO NOT REPRESENT OR WARRANT THAT THE STORAGE SERVICES ARE ACCURATE, COMPLETE, RELIABLE, CURRENT OR ERROR-FREE, OR THAT DEFECTS IN THE STORAGE SERVICES WILL BE CORRECTED. WE CANNOT AND DO NOT REPRESENT OR WARRANT THAT THE STORAGE SERVICES OR THE MATERIALS ARE FREE OF VIRUSES OR OTHER HARMFUL COMPONENTS.</p>
               <p>(C) WE DO NOT MAKE ANY REPRESENTATIONS OR WARRANTIES REGARDING THE POTENTIAL EARNINGS YOU MAY MAKE IN CONNECTION WITH YOUR SHARING OF SPACE WITH COMPANY AND ITS USERS.</p>
             </li>
@@ -481,7 +481,7 @@
               <ol>
                 <li>
                   <h4>Binding Arbitration</h4>
-                  <p>Except for any disputes, claims, suits, actions, causes of action, demands or proceedings (collectively, “<b>Disputes</b>”) in which either party seeks to bring an individual action in small claims court or seeks injunctive or other equitable relief for the alleged unlawful use of intellectual property, including, without limitation, copyrights, trademarks, trade names, logos, trade secrets or patents, you and Company (a) waive your and Company’s respective rights to have any and all Disputes arising from or related to these Storage Sharing Terms resolved in a court, and (b) waive your and Company’s respective rights to a jury trial. Instead, you and Company will arbitrate Disputes through binding arbitration (which is the referral of a Dispute to one or more persons charged with reviewing the Dispute and making a final and binding determination to resolve it instead of having the Dispute decided by a judge or jury in court).</p>
+                  <p>Except for any disputes, claims, suits, actions, causes of action, demands or proceedings (collectively, &ldquo;<b>Disputes</b>&rdquo;) in which either party seeks to bring an individual action in small claims court or seeks injunctive or other equitable relief for the alleged unlawful use of intellectual property, including, without limitation, copyrights, trademarks, trade names, logos, trade secrets or patents, you and Company (a) waive your and Company’s respective rights to have any and all Disputes arising from or related to these Storage Sharing Terms resolved in a court, and (b) waive your and Company’s respective rights to a jury trial. Instead, you and Company will arbitrate Disputes through binding arbitration (which is the referral of a Dispute to one or more persons charged with reviewing the Dispute and making a final and binding determination to resolve it instead of having the Dispute decided by a judge or jury in court).</p>
                 </li>
                 <li>
                   <h4>No Class Arbitrations, Class Actions or Representative Actions</h4>
@@ -489,7 +489,7 @@
                 </li>
                 <li>
                   <h4>Federal Arbitration Act</h4>
-                  <p>These Storage Sharing Terms affect interstate commerce and that the enforceability of this Section 15 will be both substantively and procedurally governed by and construed and enforced in accordance with the Federal Arbitration Act, 9 U.S.C. § 1 et seq. (the “<b>FAA</b>”), to the maximum extent permitted by applicable law.</p>
+                  <p>These Storage Sharing Terms affect interstate commerce and that the enforceability of this Section 15 will be both substantively and procedurally governed by and construed and enforced in accordance with the Federal Arbitration Act, 9 U.S.C. § 1 et seq. (the &ldquo;<b>FAA</b>&rdquo;), to the maximum extent permitted by applicable law.</p>
                 </li>
                 <li>
                   <h4>Notice; Informal Dispute Resolution</h4>
@@ -497,7 +497,7 @@
                 </li>
                 <li>
                   <h4>Process</h4>
-                  <p>Any arbitration will occur in New Castle County, Delaware.  Arbitration will be conducted confidentially by a single arbitrator in accordance with the rules of the Judicial Arbitration and Mediation Services (“JAMS”), which are hereby incorporated by reference.  The state and federal courts located in New Castle County, Delaware will have exclusive jurisdiction over any appeals and the enforcement of an arbitration award.  You may also litigate a Dispute in the small claims court located in the county where you reside if the Dispute meets the requirements to be heard in small claims court.</p>
+                  <p>Any arbitration will occur in New Castle County, Delaware.  Arbitration will be conducted confidentially by a single arbitrator in accordance with the rules of the Judicial Arbitration and Mediation Services (&ldquo;JAMS&rdquo;), which are hereby incorporated by reference.  The state and federal courts located in New Castle County, Delaware will have exclusive jurisdiction over any appeals and the enforcement of an arbitration award.  You may also litigate a Dispute in the small claims court located in the county where you reside if the Dispute meets the requirements to be heard in small claims court.</p>
                 </li>
                 <li>
                   <h4>Authority of Arbitrator</h4>
@@ -519,7 +519,7 @@
             </li>
             <li>
               <h4>Amendment</h4>
-              <p>We reserve the right to change these Storage Sharing Terms from time to time in our sole discretion.  If we make changes to the Storage Sharing Terms, we will provide notice of such changes, such as by posting the revised Storage Sharing Terms to the Software and updating the “Last Updated” date at the top of these Storage Sharing Terms.  Your continued sharing or rental of Space to Company will confirm your acceptance of the revised Storage Sharing Terms.  If you do not agree to the modified Storage Sharing Terms, you must stop interacting with the Storage Services via the Software.</p>
+              <p>We reserve the right to change these Storage Sharing Terms from time to time in our sole discretion.  If we make changes to the Storage Sharing Terms, we will provide notice of such changes, such as by posting the revised Storage Sharing Terms to the Software and updating the &ldquo;Last Updated&rdquo; date at the top of these Storage Sharing Terms.  Your continued sharing or rental of Space to Company will confirm your acceptance of the revised Storage Sharing Terms.  If you do not agree to the modified Storage Sharing Terms, you must stop interacting with the Storage Services via the Software.</p>
             </li>
             <li>
               <h4>Survival</h4>
