--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -257,6 +257,8 @@
                 </div>
               </div>
 
+              <hr>
+
               <div class="row form-group">
                 <div class="col-xs-8">
                   <label for="">
@@ -288,15 +290,18 @@
             </div>
 
             <div id="SettingsNetwork" class="tab-pane fade">
-              <div class="alert alert-warning" role="alert"><strong>Heads Up!</strong> Modifying the default configuration is only recommended for advanced users!</div>
+              <div class="row form-group">
+                <div class="col-xs-12">
+                  <div class="alert alert-warning" role="alert"><strong>Heads Up!</strong> Modifying the default configuration is only recommended for advanced users!</div>
+                </div>
+              </div>
+
               <div class="row form-group ">
                 <div class="col-xs-12">
                   <label for="">Enter your public hostname or IP address</label>
                   <input type="text" class="form-control" v-on:change="changeSettings" v-model="userdata.tabs[current].network.hostname">
                 </div>
               </div>
-
-              <hr>
 
               <div class="row form-group">
                 <div class="col-xs-12">
@@ -330,7 +335,11 @@
             </div>
 
             <div id="SettingsTunnels" class="tab-pane fade">
-              <div class="alert alert-warning" role="alert"><strong>Heads Up!</strong> Modifying the default configuration is only recommended for advanced users!</div>
+              <div class="row form-group">
+                <div class="col-xs-12">
+                  <div class="alert alert-warning" role="alert"><strong>Heads Up!</strong> Modifying the default configuration is only recommended for advanced users!</div>
+                </div>
+              </div>
               <div class="row form-group">
                 <div class="col-xs-4">
                   <input type="number" class="form-control margin-top" v-on:change="changeSettings" v-model="userdata.tabs[current].tunnels.numConnections">
