Update advanced settings
Add title and close button.

--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -215,6 +215,13 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
 
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">Advanced Settings</h4>
+        </div>
+
         <ul class="nav nav-tabs">
           <li class="active"><a data-toggle="tab" href="#SettingsGeneral">General</a></li>
           <li><a data-toggle="tab" href="#SettingsNetwork">Network (Drive #{{ current }})</a></li>
