--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -130,6 +130,9 @@
                             {{userdata.tabs[current].spaceUsedPercent}}%
                           </div>
                         </div>
+                        <div class="pull-right">
+                          <span class="pull-right">Remaining Space: {{userdata.tabs[current].remainingspace.size}} {{userdata.tabs[current].remainingspace.unit}}</span>
+                        </div>
                       </div>
                     </div>
                   </div>
