--- a/app/storjshare.html
+++ b/app/storjshare.html
@@ -141,7 +141,7 @@
                   </div>
                   <div class="form-group col-xs-6">
                     <label for="contracts">Successful Contracts</label>
-                    <input class="form-control" type="number" min="0" name="contracts" v-model="userdata.tabs[current].totalContracts" v-bind:disabled="userdata.tabs[current].farmer">
+                    <input class="form-control" type="number" min="0" name="contracts" v-model="userdata.tabs[current].contracts.total" v-bind:disabled="userdata.tabs[current].farmer">
                   </div>
                 </div>
               </section>
@@ -548,7 +548,7 @@
           </ol>
         </div>
         <div class="modal-footer">
-          <button v-on:click='accept' type="button" class="btn btn-green" data-dismiss="modal">I Accept</button>
+          <button v-on:click='accepted' type="button" class="btn btn-green" data-dismiss="modal">I Accept</button>
         </div>
       </div>
     </div>
